# nbody_demo

./: CMakeLists.txt  main.c  world_data.c  world_data.h
